# Project-MlOps

./: README.md  env-example  pyproject.toml  requirements_labeling.txt  requirements_preprocessing.txt  requirements_scraper.txt  requirements_training.txt  requirements_word_cloud.txt
.github/workflows/: main.yml
data/: data_mentah_review_gapura.csv  review_gapura_checkpoint.csv  review_gapura_dengan_sentiment.csv  review_gapura_stemming.csv  review_gapura_stemming_balanced.csv
model/: naive_bayes_model.pkl  svm_model.pkl  tfidf_vectorizer.pkl
src/: labeling.py  preprocessing.py  scraper.py  training.py  word_cloud.py
