[project]
name = "mlops-social-media"
version = "0.1.0"
description = ""
authors = [
    {name = "hensomxxxpipel",email = "rachadrisyh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "mlops_social_media", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
